[gd_scene load_steps=2 format=3 uid="uid://mbi1fk1dvsti"]

[ext_resource type="Script" uid="uid://bqj80ryc64jj1" path="res://demo_test_scene_manager/test_scene_1.gd" id="1_xftt1"]

[node name="TestScene1" type="Node2D"]
script = ExtResource("1_xftt1")

[node name="TextureRect" type="ColorRect" parent="."]
offset_right = 1281.0
offset_bottom = 721.0
color = Color(0.64922875, 0.46538514, 0.54959595, 1)

[node name="Label" type="Label" parent="."]
offset_left = 399.0
offset_top = 180.0
offset_right = 884.0
offset_bottom = 363.0
theme_override_font_sizes/font_size = 64
text = "scene1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 200.0
offset_bottom = 188.0

[node name="Button_Main" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
text = "Button_Main"

[node name="Button_Scene2" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
text = "Button_Scene2"

[node name="Button_Back" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
text = "Button_Back"

[node name="Label_Info" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
text = "Label_Info"

[connection signal="pressed" from="VBoxContainer/Button_Main" to="." method="_on_main_pressed"]
[connection signal="pressed" from="VBoxContainer/Button_Scene2" to="." method="_on_scene2_pressed"]
[connection signal="pressed" from="VBoxContainer/Button_Back" to="." method="_on_back_pressed"]
